# contract-diff-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
docs/: 劳动合同_v1.docx  劳动合同_v2.docx
scripts/: prepare_demo.py
specs/: 001-架构决策.md  005-v0.2-完成报告.md  007-v1.5.0-完成报告.md  演示指南.md  自进化框架.md
src/: clause_aligner.py  clause_tree.py  config.py  diff_engine.py  diff_identifier.py  llm_diff.py  logging_config.py  main.py  model_pool.py  pdf_extractor.py  risk_classifier.py  validator.py
src/constants/: risks.py
src/llm/: client.py  pool.py
src/pipeline/: alignment.py  classifier.py  diff.py  extraction.py  identifier.py  learning.py  parsing.py  traditional_diff.py  validator.py
src/prompts/: classifier.py  diff.py  identifier.py  validator.py
src/utils/: logging.py
tests/: conftest.py  test_clause_aligner.py  test_clause_tree.py  test_learning.py  test_pdf_extractor.py  test_traditional_diff.py  test_validator.py  test_web_routes.py
web/: __init__.py  app.py
web/templates/: base.html.jinja2  job.html.jinja2  learnings.html.jinja2  results.html.jinja2  upload.html.jinja2
需求/: 002-风险分类初始种子.md  003-JSON输出结构.md  004-v0.1-完成报告.md  006-最终架构设计.md  总体要求.txt
